--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Search image page</title>
-    <!-- //*<link rel="stylesheet" href="./sass/style.scss" />*// -->
+    <link rel="stylesheet" href="./sass/style.scss" />
   </head>
   <body>
     <div class="container">
